2002-01-05  Ravi Pratap  <ravi@ximian.com>

	* BitVector32.cs, ListDictionary.cs : MonoTODO everywhere!

	* NameObjectCollectionBase.cs, NameValueCollection.cs : Ditto.

2001-08-24  Nick Drochak  <ndrochak@gol.com>
	* NameObjectCollectionBase.cs: Add stub implementation
	* common.src: Add NameObjectCollectionBase to the build
	* NameValueCollection.cs: add 'override' to CopyTo().  Maybe
		this code actually belongs in the superclass.

2001-08-24  Miguel de Icaza  <miguel@ximian.com>

	* common.src: Add NameValueCollection.cs to the build

2001-08-22	John Barnette	<jbarn@httcb.net>
	* StringDictionary.cs:
		Initial working implementation.
	* ListDictionary.cs:
		Initial working implementation.

2001-07-17	John Barnette	<jbarn@httcb.net>
	* StringCollection.cs:
		Implemented and working according to spec.
	* StringIterator.cs:
		(ADDED) Implemented and working according to spec.
	* StringCollectionTest.cs:
		(ADDED) Initial revision contains 17 tests; all of 'em
		run correctly.  More complicated tests to follow.

2001-07-15  Sean MacIsaac  <macisaac@ximian.com>

	* StringCollection.cs: Added so that CodeDom.* would compile.
